[gd_scene load_steps=31 format=2]

[ext_resource path="res://Imagens/Character/Dead/Dead-Sheet.png" type="Texture" id=1]
[ext_resource path="res://cenas/UIPlanodeFundo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fontes/lady_radical/Lady Radical.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Imagens/Fundo/base_nova.png" type="Texture" id=4]
[ext_resource path="res://Imagens/Pergaminhos/PergaminhoTitle.png" type="Texture" id=5]
[ext_resource path="res://Imagens/Pergaminhos/PergaminhoMenu.png" type="Texture" id=6]
[ext_resource path="res://Imagens/Pergaminhos/PergaminhoHistoria.png" type="Texture" id=7]
[ext_resource path="res://scripts/UIGameOver.gd" type="Script" id=8]
[ext_resource path="res://Sons/MusicaGameOver.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=10]
size = 44
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="DynamicFont" id=22]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=29]
size = 76
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=30]

[sub_resource type="Animation" id=23]
resource_name = "AnimacaoTabela"

[sub_resource type="Animation" id=25]
resource_name = "Morte"
length = 1.25
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 2, 0 ), Vector2( 3, 0 ), Vector2( 4, 0 ), Vector2( 5, 0 ), Vector2( 6, 0 ), Vector2( 7, 0 ) ]
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Tabela:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 96, 209 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "AnimacaoTabela"
tracks/0/type = "value"
tracks/0/path = NodePath("Tabela:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -107, 209 ), Vector2( 96, 209 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "Morte"
length = 1.25
step = 0.125

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Tabela:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 96, 209 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ) ]
}

[node name="UIGameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_right = -2.0
script = ExtResource( 8 )

[node name="UIPlanodeFundo" parent="." instance=ExtResource( 2 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 377, 199 )
scale = Vector2( 2.25275, 2 )
texture = ExtResource( 1 )
hframes = 8
frame = 1

[node name="PlataformaGameOver" type="Sprite" parent="."]
position = Vector2( 364.625, 242 )
scale = Vector2( 2.14167, 2.16304 )
texture = ExtResource( 4 )

[node name="PergaminhoTitle" type="Sprite" parent="."]
position = Vector2( 382.5, 79 )
scale = Vector2( 0.856808, 0.812883 )
texture = ExtResource( 5 )

[node name="LabelNomeJogo" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.5
margin_top = -183.0
margin_right = 158.5
margin_bottom = -117.0
rect_pivot_offset = Vector2( 117, 335 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 10 )
text = "Fim     de     Jogo"

[node name="PergaminhoMenu" type="Sprite" parent="."]
position = Vector2( 383, 360 )
scale = Vector2( 1.94545, 2.10185 )
texture = ExtResource( 6 )

[node name="ButtonJogar" type="Button" parent="."]
margin_left = 252.0
margin_top = 341.0
margin_right = 500.0
margin_bottom = 394.0
custom_colors/font_color_disabled = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_focus = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "Jogar Novamente"

[node name="ButtonSair" type="Button" parent="."]
margin_left = 533.0
margin_top = 342.0
margin_right = 647.0
margin_bottom = 395.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "Sair"

[node name="ButtonMenu" type="Button" parent="."]
margin_left = 119.0
margin_top = 342.0
margin_right = 233.0
margin_bottom = 395.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 17 )
custom_styles/pressed = SubResource( 18 )
custom_styles/focus = SubResource( 19 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "Menu"

[node name="Tabela" type="Sprite" parent="."]
position = Vector2( 96, 209 )
scale = Vector2( 0.291936, 0.659799 )
texture = ExtResource( 7 )

[node name="LabelRecorde_Escrita" type="Label" parent="Tabela"]
margin_left = -178.122
margin_top = 6.06244
margin_right = -49.1216
margin_bottom = 42.0624
custom_fonts/font = SubResource( 22 )
text = "R e c o r d e "

[node name="LabelPontos_Escrita" type="Label" parent="Tabela"]
margin_left = -178.0
margin_top = -99.0
margin_right = -41.0
margin_bottom = -63.0
custom_fonts/font = SubResource( 22 )
text = "P o n t o s "

[node name="LabelPontos" type="Label" parent="Tabela"]
margin_left = 61.6573
margin_top = -86.39
margin_right = 249.657
margin_bottom = 13.61
custom_fonts/font = SubResource( 29 )
custom_styles/normal = SubResource( 30 )
text = "2 0"

[node name="LabelRecorde" type="Label" parent="Tabela"]
margin_left = 61.6573
margin_top = 10.6093
margin_right = 249.657
margin_bottom = 110.609
custom_fonts/font = SubResource( 29 )
text = "2 0"

[node name="AnimacaoMorte" type="AnimationPlayer" parent="."]
autoplay = "Morte"
anims/AnimacaoTabela = SubResource( 23 )
anims/Morte = SubResource( 25 )
anims/RESET = SubResource( 24 )

[node name="AnimacaoTabela" type="AnimationPlayer" parent="."]
autoplay = "AnimacaoTabela"
anims/AnimacaoTabela = SubResource( 26 )
anims/Morte = SubResource( 27 )
anims/RESET = SubResource( 28 )

[node name="AudioGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -20.0

[connection signal="pressed" from="ButtonJogar" to="." method="_on_ButtonJogar_pressed"]
[connection signal="pressed" from="ButtonSair" to="." method="_on_ButtonSair_pressed"]
[connection signal="pressed" from="ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
